# PlexFileRenamer

./: CMakeLists.txt  FileManager.cpp  FileManager.h  FilesWithinDirectory.cpp  FilesWithinDirectory.h  Formating.cpp  Formating.h  NewMain.cpp  NewMain.h  ReadMe.txt  main.cpp  version.rc
Plex File Renamer/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja
Plex File Renamer/.cmake/api/v1/reply/: cache-v2-041e91b6f7ff7ba38e14.json  cmakeFiles-v1-fa97cbb8ccb6dbc789ea.json  codemodel-v2-b9328be455bd8b20310b.json  index-2025-06-02T09-29-18-0086.json  target-PlexFileRenamer-Release-41a713b6060ee6f0d3b3.json
